# CaffeTrainMemory

./: CMakeLists.txt  README.md  lenet_solver.prototxt  lenet_train_test.prototxt  main.cpp  model.binary
CompareLeNet/: CMakeLists.txt  main.cpp
LeNet/: CMakeLists.txt  lenet_solver.prototxt  lenet_solverleger.prototxt  lenetleger.prototxt  main.cpp
LeNetAndShape/: CMakeLists.txt  main.cpp
LeNetDisplayStruct/: CMakeLists.txt  lenet_train_Leger.prototxt  lenet_train_test.prototxt  main.cpp
LeNetLight/: CMakeLists.txt  main.cpp
MakeLeNet/: CMakeLists.txt  main.cpp
MatchFilters/: CMakeLists.txt  main.cpp
